; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_mysql-proto.c_lua_proto_append_err_packet.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_mysql-proto.c_lua_proto_append_err_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TTABLE = common dso_local global i32 0, align 4
@errmsg = common dso_local global i32 0, align 4
@sqlstate = common dso_local global i32 0, align 4
@errcode = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lua_proto_append_err_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lua_proto_append_err_packet(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @LUA_TTABLE, align 4
  %7 = call i32 @luaL_checktype(i32* %5, i32 1, i32 %6)
  %8 = call i32* (...) @network_mysqld_err_packet_new()
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @errmsg, align 4
  %11 = call i32 @LUA_IMPORT_STR(i32* %9, i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @sqlstate, align 4
  %14 = call i32 @LUA_IMPORT_STR(i32* %12, i32 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @errcode, align 4
  %17 = call i32 @LUA_IMPORT_INT(i32* %15, i32 %16)
  %18 = call i32* @g_string_new(i32* null)
  store i32* %18, i32** %3, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @network_mysqld_proto_append_err_packet(i32* %19, i32* %20)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @network_mysqld_err_packet_free(i32* %22)
  %24 = load i32*, i32** %2, align 8
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @S(i32* %25)
  %27 = call i32 @lua_pushlstring(i32* %24, i32 %26)
  %28 = load i32*, i32** %3, align 8
  %29 = load i32, i32* @TRUE, align 4
  %30 = call i32 @g_string_free(i32* %28, i32 %29)
  ret i32 1
}

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32* @network_mysqld_err_packet_new(...) #1

declare dso_local i32 @LUA_IMPORT_STR(i32*, i32) #1

declare dso_local i32 @LUA_IMPORT_INT(i32*, i32) #1

declare dso_local i32* @g_string_new(i32*) #1

declare dso_local i32 @network_mysqld_proto_append_err_packet(i32*, i32*) #1

declare dso_local i32 @network_mysqld_err_packet_free(i32*) #1

declare dso_local i32 @lua_pushlstring(i32*, i32) #1

declare dso_local i32 @S(i32*) #1

declare dso_local i32 @g_string_free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
